--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -45,6 +45,7 @@
                                 % for the footnote
 \usepackage{verbatim} % nalipour
 \usepackage{fixltx2e}
+\usepackage{adjustbox}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -61,40 +62,33 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{footline}[frame number]
-\usetheme{Boadilla}%CambridgeUS}%Boadilla}%Pittsburgh}
-\usecolortheme{seahorse}
+% \usetheme{Boadilla}%CambridgeUS}%Boadilla}%Pittsburgh}
+% \usecolortheme{seahorse}
 
 % \usetheme{CambridgeUS}
 % \usecolortheme{seahorse}
-\usetheme{Boadilla}%CambridgeUS}%Boadilla}%Pittsburgh}
-\usecolortheme{seahorse}
-\definecolor{gold}{HTML}{FDD017}
-\definecolor{deep sky blue}{HTML}{3BB9FF}
-\definecolor{light sky blue}{HTML}{82CAFA}
+\usetheme{default}%CambridgeUS}%Boadilla}%Pittsburgh}
+\usecolortheme{default}
+% \definecolor{gold}{HTML}{FDD017}
+% \definecolor{deep sky blue}{HTML}{3BB9FF}
+% \definecolor{light sky blue}{HTML}{82CAFA}
 
-\definecolor{mybackground}{HTML}{82CAFA}
-\definecolor{myforeground}{HTML}{0000A0}
+% \definecolor{mybackground}{HTML}{82CAFA}
+% \definecolor{myforeground}{HTML}{0000A0}
 
-\setbeamercolor{normal text}{fg=black,bg=white}
-\setbeamercolor{alerted text}{fg=red}
-\setbeamercolor{example text}{fg=black}
+% \setbeamercolor{normal text}{fg=black,bg=white}
+% \setbeamercolor{alerted text}{fg=red}
+% \setbeamercolor{example text}{fg=black}
 
-\setbeamercolor{background canvas}{fg=myforeground, bg=white}
-\setbeamercolor{background}{fg=myforeground, bg=mybackground}
+% \setbeamercolor{background canvas}{fg=myforeground, bg=white}
+% \setbeamercolor{background}{fg=myforeground, bg=mybackground}
 
-% \setbeamercolor{palette primary}{fg=black,
-% bg=blue!40!black!20!lightgray}%gray!30!white}
-% \setbeamercolor{palette secondary}{fg=black, bg=blue!40!black!20!white}%!80!white}
-% \setbeamercolor{palette tertiary}{fg=black, bg=blue!40!black!40!lightgray}%gray!40!white}
+% \setbeamercolor{palette primary}{fg=white, bg=RoyalBlue}%gray!30!white}
+% \setbeamercolor{palette secondary}{fg=black, bg=RoyalBlue!20}%!80!white}
+% \setbeamercolor{palette tertiary}{fg=white, bg=RoyalBlue}%gray!40!white}
 
-
-\setbeamercolor{palette primary}{fg=white, bg=RoyalBlue}%gray!30!white}
-\setbeamercolor{palette secondary}{fg=black, bg=RoyalBlue!20}%!80!white}
-\setbeamercolor{palette tertiary}{fg=white, bg=RoyalBlue}%gray!40!white}
-% \setbeamercolor{itemize item}{bg=RoyalBlue}
-% \setbeamercolor{enumerate enum}{bg=RoyalBlue}
-\setbeamercolor{block title}{use=structure,fg=white,bg=RoyalBlue!80}
-\setbeamercolor{block body}{use=structure,fg=black,bg=RoyalBlue!20}
+% \setbeamercolor{block title}{use=structure,fg=white,bg=RoyalBlue!80}
+% \setbeamercolor{block body}{use=structure,fg=black,bg=RoyalBlue!20}
 
 % \usepackage{libertine} % For the font
 
