--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -45,7 +45,8 @@
                                 % for the footnote
 \usepackage{verbatim} % nalipour
 \usepackage{fixltx2e}
-\usepackage{adjustbox}
+\usepackage{adjustbox}%nalipour
+\usepackage{pifont} %nalipour
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
